fix(api-rest): include surface metadata for background layers
