# backend/tests/unit/api_rest/openapi_snapshot.json
@@ -1162,6 +1162,20 @@
           "payload": {
             "type": "string",
             "title": "Payload"
+          },
+          "surface_y": {
+            "anyOf": [
+              {
+                "items": {
+                  "type": "integer"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Surface Y"
           }
         },
         "type": "object",
